--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                     <div class="footer-item">
                         <div class="title-container">
                             <img src="img/logo/logo.png" class="logo__img">
-                            <span class="logo-text">tagam</span>
+                            <span class="logo-text">tajam</span>
                         </div>
                         <div class="footer-item-item">
 						    <p class="descrRobotoLight">lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh elit. Duis sed odio sit amet auctror a ornare odio non mauris vitae erat in elit</p>
@@ -369,4 +369,5 @@
 
 </body>
 </html>
+
 
