--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 
         <div id="menu" class="sidebar">
             <button class="burger-menu sidebar-burger" id="sidebar-burger" onclick="openSidebar()">
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
+                <div class="bar sidebar_bar"></div>
+                <div class="bar sidebar_bar"></div>
+                <div class="bar sidebar_bar"></div>
             </button>
             <nav class="sidebar_nav">
                 <a href="#" class="sidebar_nav__link title-h3">HOME</a>
@@ -210,7 +210,7 @@
                     <p class="peoples-wrapper_description">CEO TENGKUREP</p>
                 </div>
                 <div class="people-photo-wrapper">
-                    <img class="peolple-shevron" src="img/ourworks/right.png">
+                    <img class="peolple-shevron" src="img/people/back.png">
                         <div class="people-photo-wrapper-item">
                         <img src="img/people/people1.png">
                     </div>
@@ -226,7 +226,7 @@
                     <div class="people-photo-wrapper-item">
                         <img src="img/people/people5.png">
                     </div>
-                    <img class="peolple-shevron" src="img/ourworks/right.png">
+                    <img class="peolple-shevron" src="img/people/forward.png">
                 </div>
             </section>
         </div>
@@ -302,7 +302,7 @@
                         <div class="footer-item-item">
                             <div class="input-wrapper">
 						        <input type="text" placeholder="Subscribe our newsletter">
-                                <button><i class="fa fa-paper-plane-o fa-1x"></i></button>
+                                <button class="fa-paper"><img src="img/footer/tg.png"></button>
                             </div>
                             <div class="socials">
                                 <div class="socials__item"><img src="img/footer/facebook.png" alt="FB"></div>
