--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
             <section class="container">
                 <div class="peoples-wrapper">
                     <p>“</p>
-                    <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.
+                    <p class="descrPlayfairRegular">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.
                     </p>
-                    <h3 class="title_h3">JANE GALADRIEL</h3>
+                    <h3 class="title-h3">JANE GALADRIEL</h3>
                     <p class="peoples-wrapper_description">CEO TENGKUREP</p>
                 </div>
                 <div class="people-photo-wrapper">
@@ -306,9 +306,10 @@
                             </div>
                             <div class="socials">
                                 <div class="socials__item"><img src="img/footer/facebook.png" alt="FB"></div>
-                                <div class="socials__item"><img src="img/footer/google.png" alt="G+"></div>
-                                <div class="socials__item"><img src="img/footer/instagram.png" alt="IG"></div>
                                 <div class="socials__item"><img src="img/footer/twitter.png" alt="X"></div>
+                                <div class="socials__item"><img src="img/footer/instagram3.png" alt="G+"></div>
+                                <div class="socials__item"><img src="img/footer/instagram.png" alt="IG"></div>
+                                <div class="socials__item"><img src="img/footer/google.png" alt="G+"></div>
                                 <div class="socials__item"><img src="img/footer/youtube.png" alt="YT"></div>
                             </div>
 					    </div>
@@ -316,11 +317,11 @@
                 </div>
                 <div class="footer-nav-wrapper">
 			            <nav class="footer-nav">
-				            <a href="#first-display" class="nav__link">HOME</a>
-                            <a href="#story-display" class="nav__link">ABOUT</a>
-                            <a href="#expertise" class="nav__link">EXPERTISE</a>
+				            <a href="#" class="nav__link descrRobotoLight">HELP</a>
+                            <a href="#" class="nav__link descrRobotoLight">TERMS & CONDITIONS</a>
+                            <a href="#" class="nav__link descrRobotoLight">PRIVACY</a>
                         </nav>
-                        <p>Copyright 2015 - Tajem Creative </p>
+                        <p class="descrRobotoLight copyright">Copyright © 2015 - Tajem Creative</p>
                     </div>
             </section>
         </div>
